deploy: bb7db5f111d9c4ca92106f51b75b454626544989

--- a/_modules/copyxnat/commands/ohif_command.html
+++ b/_modules/copyxnat/commands/ohif_command.html
@@ -52,6 +52,7 @@
     <span class="n">VERB</span> <span class="o">=</span> <span class="s1">&#39;reset&#39;</span>
     <span class="n">COMMAND_LINE</span> <span class="o">=</span> <span class="s1">&#39;ohif&#39;</span>
     <span class="n">USE_DST_SERVER</span> <span class="o">=</span> <span class="kc">False</span>
+    <span class="n">MODIFY_SRC_SERVER</span> <span class="o">=</span> <span class="kc">True</span>
     <span class="n">MODIFY_DST_SERVER</span> <span class="o">=</span> <span class="kc">False</span>
     <span class="n">CACHE_TYPE</span> <span class="o">=</span> <span class="s1">&#39;cache&#39;</span>
     <span class="n">HELP</span> <span class="o">=</span> <span class="s1">&#39;Reset the OHIF viewer session data so it will find all images&#39;</span>
