--- a/_modules/copyxnat/commands/rebuild_catalog_command.html
+++ b/_modules/copyxnat/commands/rebuild_catalog_command.html
@@ -54,6 +54,7 @@
     <span class="n">VERB</span> <span class="o">=</span> <span class="s1">&#39;rebuild&#39;</span>
     <span class="n">COMMAND_LINE</span> <span class="o">=</span> <span class="s1">&#39;rebuild-catalog&#39;</span>
     <span class="n">USE_DST_SERVER</span> <span class="o">=</span> <span class="kc">False</span>
+    <span class="n">MODIFY_SRC_SERVER</span> <span class="o">=</span> <span class="kc">True</span>
     <span class="n">MODIFY_DST_SERVER</span> <span class="o">=</span> <span class="kc">False</span>
     <span class="n">CACHE_TYPE</span> <span class="o">=</span> <span class="s1">&#39;cache&#39;</span>
     <span class="n">HELP</span> <span class="o">=</span> <span class="s1">&#39;Request a rebuild of the XNAT catalog to fix data issues&#39;</span>
