--- a/_modules/copyxnat/commands/show_command.html
+++ b/_modules/copyxnat/commands/show_command.html
@@ -53,6 +53,7 @@
     <span class="n">VERB</span> <span class="o">=</span> <span class="s1">&#39;examine&#39;</span>
     <span class="n">COMMAND_LINE</span> <span class="o">=</span> <span class="s1">&#39;show&#39;</span>
     <span class="n">USE_DST_SERVER</span> <span class="o">=</span> <span class="kc">False</span>
+    <span class="n">MODIFY_SRC_SERVER</span> <span class="o">=</span> <span class="kc">False</span>
     <span class="n">MODIFY_DST_SERVER</span> <span class="o">=</span> <span class="kc">False</span>
     <span class="n">CACHE_TYPE</span> <span class="o">=</span> <span class="s1">&#39;cache&#39;</span>
     <span class="n">HELP</span> <span class="o">=</span> <span class="s1">&#39;Show information about XNAT projects&#39;</span>
