--- a/genindex.html
+++ b/genindex.html
@@ -428,11 +428,9 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.fetch_interface">fetch_interface() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.fetch_interface">fetch_interface() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
 
       <ul>
-        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.fetch_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
-</li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.fetch_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
@@ -454,6 +452,12 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_attribute">get_attribute() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.get_attribute">(copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.get_children">get_children() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 </li>
       <li><a href="versioneer.html#versioneer.get_cmdclass">get_cmdclass() (in module versioneer)</a>
@@ -478,14 +482,14 @@
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.get_tags_to_remap">get_tags_to_remap() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.get_version">get_version() (in module copyxnat.utils.versioning)</a>
 
       <ul>
         <li><a href="versioneer.html#versioneer.get_version">(in module versioneer)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.get_version_string">get_version_string() (in module copyxnat.utils.versioning)</a>
 </li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.get_versions">get_versions() (in module copyxnat.utils.versioneer_version)</a>
@@ -626,6 +630,20 @@
         <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.MODIFY_DST_SERVER">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand attribute)</a>
 </li>
         <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.MODIFY_DST_SERVER">(copyxnat.commands.show_command.ShowCommand attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.MODIFY_SRC_SERVER">MODIFY_SRC_SERVER (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
+
+      <ul>
+        <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.MODIFY_SRC_SERVER">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.MODIFY_SRC_SERVER">(copyxnat.commands.export_command.ExportCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.MODIFY_SRC_SERVER">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.MODIFY_SRC_SERVER">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.MODIFY_SRC_SERVER">(copyxnat.commands.show_command.ShowCommand attribute)</a>
 </li>
       </ul></li>
       <li>
@@ -799,8 +817,16 @@
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.project_list">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.project_name_metadata">project_name_metadata() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.project_name_metadata">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.provide_metadata">provide_metadata() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 
       <ul>
@@ -809,8 +835,6 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.provide_metadata">(copyxnat.xnat.xnat_interface.XnatServer method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterCodes">PyReporterCodes (class in copyxnat.pyreporter.pyreporter)</a>
@@ -961,6 +985,12 @@
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SESSION_ID_MAP">SESSION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.set_attribute">set_attribute() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.set_attribute">(copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand">ShowCommand (class in copyxnat.commands.show_command)</a>
