--- a/_modules/copyxnat/commands/export_command.html
+++ b/_modules/copyxnat/commands/export_command.html
@@ -52,6 +52,7 @@
     <span class="n">VERB</span> <span class="o">=</span> <span class="s1">&#39;download&#39;</span>
     <span class="n">COMMAND_LINE</span> <span class="o">=</span> <span class="s1">&#39;export&#39;</span>
     <span class="n">USE_DST_SERVER</span> <span class="o">=</span> <span class="kc">False</span>
+    <span class="n">MODIFY_SRC_SERVER</span> <span class="o">=</span> <span class="kc">False</span>
     <span class="n">MODIFY_DST_SERVER</span> <span class="o">=</span> <span class="kc">False</span>
     <span class="n">CACHE_TYPE</span> <span class="o">=</span> <span class="s1">&#39;downloads&#39;</span>
     <span class="n">HELP</span> <span class="o">=</span> <span class="s1">&#39;Export XNAT projects to disk&#39;</span>
