--- a/_modules/copyxnat/ui/copyxnat_command_line.html
+++ b/_modules/copyxnat/ui/copyxnat_command_line.html
@@ -164,8 +164,7 @@
     <span class="n">src_params</span> <span class="o">=</span> <span class="n">XnatServerParams</span><span class="p">(</span><span class="n">host</span><span class="o">=</span><span class="n">args</span><span class="o">.</span><span class="n">src_host</span><span class="p">,</span>
                                   <span class="n">user</span><span class="o">=</span><span class="n">args</span><span class="o">.</span><span class="n">src_user</span><span class="p">,</span>
                                   <span class="n">pwd</span><span class="o">=</span><span class="n">src_pw</span><span class="p">,</span>
-                                  <span class="n">insecure</span><span class="o">=</span><span class="n">args</span><span class="o">.</span><span class="n">insecure</span><span class="p">,</span>
-                                  <span class="n">read_only</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+                                  <span class="n">insecure</span><span class="o">=</span><span class="n">args</span><span class="o">.</span><span class="n">insecure</span><span class="p">)</span>
 
     <span class="k">if</span> <span class="n">command</span><span class="o">.</span><span class="n">USE_DST_SERVER</span><span class="p">:</span>
         <span class="n">dst_host</span> <span class="o">=</span> <span class="n">args</span><span class="o">.</span><span class="n">dst_host</span> <span class="k">if</span> <span class="s1">&#39;dst_host&#39;</span> <span class="ow">in</span> <span class="n">args</span> <span class="k">else</span> <span class="kc">None</span>
@@ -177,8 +176,7 @@
         <span class="n">dst_params</span> <span class="o">=</span> <span class="n">XnatServerParams</span><span class="p">(</span><span class="n">host</span><span class="o">=</span><span class="n">dst_host</span><span class="p">,</span>
                                       <span class="n">user</span><span class="o">=</span><span class="n">dst_user</span><span class="p">,</span>
                                       <span class="n">pwd</span><span class="o">=</span><span class="n">dst_pw</span><span class="p">,</span>
-                                      <span class="n">insecure</span><span class="o">=</span><span class="n">args</span><span class="o">.</span><span class="n">insecure</span><span class="p">,</span>
-                                      <span class="n">read_only</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span>
+                                      <span class="n">insecure</span><span class="o">=</span><span class="n">args</span><span class="o">.</span><span class="n">insecure</span><span class="p">)</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">dst_params</span> <span class="o">=</span> <span class="kc">None</span>
 
