--- a/_modules/copyxnat/xnat_backend/pyxnat_server.html
+++ b/_modules/copyxnat/xnat_backend/pyxnat_server.html
@@ -126,6 +126,15 @@
         <span class="sd">&quot;&quot;&quot;Return the pyxnat interface to this item&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_interface</span></div>
 
+<div class="viewcode-block" id="PyXnatItem.create"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.create">[docs]</a>    <span class="nd">@classmethod</span>
+    <span class="nd">@abc</span><span class="o">.</span><span class="n">abstractmethod</span>
+    <span class="k">def</span> <span class="nf">create</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">parent_pyxnatitem</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Create a new wrapper object of this class</span>
+<span class="sd">        @param parent_pyxnatitem: parent PyXnatItem of the item to be created</span>
+<span class="sd">        @param label: XNAT label of the item being created</span>
+<span class="sd">        &quot;&quot;&quot;</span></div>
+
 <div class="viewcode-block" id="PyXnatItem.create_on_server"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.create_on_server">[docs]</a>    <span class="k">def</span> <span class="nf">create_on_server</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">local_file</span><span class="p">,</span> <span class="n">create_params</span><span class="p">,</span> <span class="n">overwrite</span><span class="p">,</span> <span class="n">reporter</span><span class="p">):</span>  <span class="c1"># pylint: disable=unused-argument</span>
         <span class="sd">&quot;&quot;&quot;Create this item on the XNAT server if it does not already exist&quot;&quot;&quot;</span>
 
@@ -177,14 +186,27 @@
 <div class="viewcode-block" id="PyXnatItemWithResources.resources"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.resources">[docs]</a>    <span class="k">def</span> <span class="nf">resources</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Return item&#39;s resources as an array of PyXnatResource wrappers&quot;&quot;&quot;</span>
         <span class="k">for</span> <span class="n">resource</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">resources</span><span class="p">():</span>
-            <span class="k">yield</span> <span class="n">PyXnatResource</span><span class="p">(</span><span class="n">interface</span><span class="o">=</span><span class="n">resource</span><span class="p">)</span></div>
+            <span class="k">yield</span> <span class="n">PyXnatResource</span><span class="p">(</span><span class="n">interface</span><span class="o">=</span><span class="n">resource</span><span class="p">)</span></div></div>
 
-<div class="viewcode-block" id="PyXnatItemWithResources.in_resources"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.in_resources">[docs]</a>    <span class="k">def</span> <span class="nf">in_resources</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+
+<div class="viewcode-block" id="PyXnatItemWithInOutResources"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources">[docs]</a><span class="k">class</span> <span class="nc">PyXnatItemWithInOutResources</span><span class="p">(</span><span class="n">PyXnatItem</span><span class="p">):</span>
+    <span class="sd">&quot;&quot;&quot;Wrapper around a pyxnat interface that can contain resources&quot;&quot;&quot;</span>
+
+<div class="viewcode-block" id="PyXnatItemWithInOutResources.create"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources.create">[docs]</a>    <span class="nd">@classmethod</span>
+    <span class="nd">@abc</span><span class="o">.</span><span class="n">abstractmethod</span>
+    <span class="k">def</span> <span class="nf">create</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">parent_pyxnatitem</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Create a new wrapper object of this class</span>
+<span class="sd">        @param parent_pyxnatitem: parent PyXnatItem of the item to be created</span>
+<span class="sd">        @param label: XNAT label of the item being created</span>
+<span class="sd">        &quot;&quot;&quot;</span></div>
+
+<div class="viewcode-block" id="PyXnatItemWithInOutResources.in_resources"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources.in_resources">[docs]</a>    <span class="k">def</span> <span class="nf">in_resources</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Return item&#39;s in resources as an array of PyXnatResource wrappers&quot;&quot;&quot;</span>
         <span class="k">for</span> <span class="n">in_resource</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">in_resources</span><span class="p">():</span>
             <span class="k">yield</span> <span class="n">PyXnatInResource</span><span class="p">(</span><span class="n">interface</span><span class="o">=</span><span class="n">in_resource</span><span class="p">)</span></div>
 
-<div class="viewcode-block" id="PyXnatItemWithResources.out_resources"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.out_resources">[docs]</a>    <span class="k">def</span> <span class="nf">out_resources</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<div class="viewcode-block" id="PyXnatItemWithInOutResources.out_resources"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources.out_resources">[docs]</a>    <span class="k">def</span> <span class="nf">out_resources</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Return item&#39;s out resources as an array of PyXnatResource wrappers&quot;&quot;&quot;</span>
         <span class="k">for</span> <span class="n">out_resource</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">out_resources</span><span class="p">():</span>
             <span class="k">yield</span> <span class="n">PyXnatOutResource</span><span class="p">(</span><span class="n">interface</span><span class="o">=</span><span class="n">out_resource</span><span class="p">)</span></div></div>
@@ -194,14 +216,13 @@
     <span class="sd">&quot;&quot;&quot;Wrapper around a pyxnat resource interface&quot;&quot;&quot;</span>
 
 <div class="viewcode-block" id="PyXnatResourceBase.create"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.create">[docs]</a>    <span class="nd">@classmethod</span>
+    <span class="nd">@abc</span><span class="o">.</span><span class="n">abstractmethod</span>
     <span class="k">def</span> <span class="nf">create</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">parent_pyxnatitem</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Create a new resource wrapper</span>
+<span class="sd">        Create a new wrapper object of this class</span>
 <span class="sd">        @param parent_pyxnatitem: parent PyXnatItem of the item to be created</span>
 <span class="sd">        @param label: XNAT label of the item being created</span>
-<span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="bp">cls</span><span class="p">(</span>
-            <span class="n">interface</span><span class="o">=</span><span class="n">parent_pyxnatitem</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">resource</span><span class="p">(</span><span class="n">label</span><span class="p">))</span></div>
+<span class="sd">        &quot;&quot;&quot;</span></div>
 
 <div class="viewcode-block" id="PyXnatResourceBase.create_on_server"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.create_on_server">[docs]</a>    <span class="k">def</span> <span class="nf">create_on_server</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">local_file</span><span class="p">,</span> <span class="n">create_params</span><span class="p">,</span> <span class="n">overwrite</span><span class="p">,</span> <span class="n">reporter</span><span class="p">):</span>
         <span class="n">interface</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span>
@@ -234,15 +255,30 @@
 
 
 <div class="viewcode-block" id="PyXnatResource"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResource">[docs]</a><span class="k">class</span> <span class="nc">PyXnatResource</span><span class="p">(</span><span class="n">PyXnatResourceBase</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Wrapper around a pyxnat resource interface&quot;&quot;&quot;</span></div>
+    <span class="sd">&quot;&quot;&quot;Wrapper around a pyxnat resource interface&quot;&quot;&quot;</span>
+
+<div class="viewcode-block" id="PyXnatResource.create"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResource.create">[docs]</a>    <span class="nd">@classmethod</span>
+    <span class="k">def</span> <span class="nf">create</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">parent_pyxnatitem</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
+        <span class="k">return</span> <span class="bp">cls</span><span class="p">(</span>
+            <span class="n">interface</span><span class="o">=</span><span class="n">parent_pyxnatitem</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">resource</span><span class="p">(</span><span class="n">label</span><span class="p">))</span></div></div>
 
 
 <div class="viewcode-block" id="PyXnatInResource"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatInResource">[docs]</a><span class="k">class</span> <span class="nc">PyXnatInResource</span><span class="p">(</span><span class="n">PyXnatResourceBase</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Wrapper around a pyxnat in resource interface&quot;&quot;&quot;</span></div>
+    <span class="sd">&quot;&quot;&quot;Wrapper around a pyxnat in resource interface&quot;&quot;&quot;</span>
+
+<div class="viewcode-block" id="PyXnatInResource.create"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatInResource.create">[docs]</a>    <span class="nd">@classmethod</span>
+    <span class="k">def</span> <span class="nf">create</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">parent_pyxnatitem</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
+        <span class="k">return</span> <span class="bp">cls</span><span class="p">(</span>
+            <span class="n">interface</span><span class="o">=</span><span class="n">parent_pyxnatitem</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">in_resource</span><span class="p">(</span><span class="n">label</span><span class="p">))</span></div></div>
 
 
 <div class="viewcode-block" id="PyXnatOutResource"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatOutResource">[docs]</a><span class="k">class</span> <span class="nc">PyXnatOutResource</span><span class="p">(</span><span class="n">PyXnatResourceBase</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Wrapper around a pyxnat out resource interface&quot;&quot;&quot;</span></div>
+    <span class="sd">&quot;&quot;&quot;Wrapper around a pyxnat out resource interface&quot;&quot;&quot;</span>
+
+<div class="viewcode-block" id="PyXnatOutResource.create"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatOutResource.create">[docs]</a>    <span class="nd">@classmethod</span>
+    <span class="k">def</span> <span class="nf">create</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">parent_pyxnatitem</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
+        <span class="k">return</span> <span class="bp">cls</span><span class="p">(</span>
+            <span class="n">interface</span><span class="o">=</span><span class="n">parent_pyxnatitem</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">out_resource</span><span class="p">(</span><span class="n">label</span><span class="p">))</span></div></div>
 
 
 <div class="viewcode-block" id="PyXnatFile"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile">[docs]</a><span class="k">class</span> <span class="nc">PyXnatFile</span><span class="p">(</span><span class="n">PyXnatItem</span><span class="p">):</span>
@@ -350,7 +386,7 @@
         <span class="k">return</span> <span class="bp">cls</span><span class="p">(</span><span class="n">interface</span><span class="o">=</span><span class="n">parent_pyxnatitem</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">scan</span><span class="p">(</span><span class="n">label</span><span class="p">))</span></div></div>
 
 
-<div class="viewcode-block" id="PyXnatAssessor"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor">[docs]</a><span class="k">class</span> <span class="nc">PyXnatAssessor</span><span class="p">(</span><span class="n">PyXnatItemWithResources</span><span class="p">):</span>
+<div class="viewcode-block" id="PyXnatAssessor"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor">[docs]</a><span class="k">class</span> <span class="nc">PyXnatAssessor</span><span class="p">(</span><span class="n">PyXnatItemWithInOutResources</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Wrapper around a pyxnat assessor interface&quot;&quot;&quot;</span>
 
 <div class="viewcode-block" id="PyXnatAssessor.create"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor.create">[docs]</a>    <span class="nd">@classmethod</span>
@@ -359,7 +395,7 @@
             <span class="n">interface</span><span class="o">=</span><span class="n">parent_pyxnatitem</span><span class="o">.</span><span class="n">fetch_interface</span><span class="p">()</span><span class="o">.</span><span class="n">assessor</span><span class="p">(</span><span class="n">label</span><span class="p">))</span></div></div>
 
 
-<div class="viewcode-block" id="PyXnatReconstruction"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatReconstruction">[docs]</a><span class="k">class</span> <span class="nc">PyXnatReconstruction</span><span class="p">(</span><span class="n">PyXnatItemWithResources</span><span class="p">):</span>
+<div class="viewcode-block" id="PyXnatReconstruction"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatReconstruction">[docs]</a><span class="k">class</span> <span class="nc">PyXnatReconstruction</span><span class="p">(</span><span class="n">PyXnatItemWithInOutResources</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Wrapper around a pyxnat reconstruction interface&quot;&quot;&quot;</span>
 
 <div class="viewcode-block" id="PyXnatReconstruction.create"><a class="viewcode-back" href="../../../copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatReconstruction.create">[docs]</a>    <span class="nd">@classmethod</span>
