--- a/genindex.html
+++ b/genindex.html
@@ -219,8 +219,6 @@
         <li><a href="copyxnat.pyreporter.html#module-copyxnat.pyreporter">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.pyreporter.pyreporter
 
@@ -235,6 +233,8 @@
         <li><a href="copyxnat.ui.html#module-copyxnat.ui">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui.copyxnat_command_line
 
@@ -341,11 +341,21 @@
 </li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatFile class method)</a>
 </li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatInResource.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatInResource class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatItem class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources class method)</a>
+</li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatOutResource.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatOutResource class method)</a>
 </li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatProject.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatProject class method)</a>
 </li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatReconstruction.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatReconstruction class method)</a>
+</li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResource.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatResource class method)</a>
 </li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase class method)</a>
 </li>
@@ -552,7 +562,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.in_resource">in_resource (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.in_resources">in_resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources.in_resources">in_resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources method)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.info">info() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
@@ -765,7 +775,7 @@
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.out_resource">out_resource (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.out_resources">out_resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources.out_resources">out_resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources method)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.output">output() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
@@ -825,8 +835,6 @@
       </ul></li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.provide_metadata">provide_metadata() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 
       <ul>
@@ -835,6 +843,8 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.provide_metadata">(copyxnat.xnat.xnat_interface.XnatServer method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterCodes">PyReporterCodes (class in copyxnat.pyreporter.pyreporter)</a>
@@ -848,6 +858,8 @@
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatInResource">PyXnatInResource (class in copyxnat.xnat_backend.pyxnat_server)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem">PyXnatItem (class in copyxnat.xnat_backend.pyxnat_server)</a>
+</li>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources">PyXnatItemWithInOutResources (class in copyxnat.xnat_backend.pyxnat_server)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources">PyXnatItemWithResources (class in copyxnat.xnat_backend.pyxnat_server)</a>
 </li>
